--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -46,7 +46,8 @@
   "global_loading": "{{emote_loading}} Loading...",
   "global_not_in_voice": "{{emote_fail}} User **{{target.tag}}** `({{target.id}})` is currently not connected to any Voice Channels!",
   "global_error": {
-    "unknown": "{{emote_warn}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}"
+    "unknown": "{{emote_fail}} An unknown error has occurred, please try again later or if the issue persists contact the developers at {{discord_invite}}",
+    "automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined."
   },
 
   "global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
@@ -116,9 +117,9 @@
 
   "automod_less_than_zero": "{{emote_warn}} {{limit}} cannot be less than `0`",
 
-  "automod_not_in_database": "{{emote_warn}} Item {{item}} has not yet been added to the AutoMod database.",
-  "automod_already_in_database": "{{emote_warn}} Item {{item}} is already in the AutoMod database.",
-  "automod_add_success": "{{emote_success}} Successfully added item `{{item}}` to `{{category}}`.",
+  "automod_not_in_database": "{{emote_warn}} Item `{{item}}` has not yet been added to the AutoMod database.",
+  "automod_already_in_database": "{{emote_warn}} Item(s) `{{item}}` is/are already in the AutoMod database.",
+  "automod_add_success": "{{emote_success}} Successfully added item(s) `{{item}}` to `{{category}}`.",
   "automod_remove_success": "{{emote_success}} Successfully removed item `{{item}}` from `{{category}}`",
 
   "automod_updated_limit": "{{emote_success}} Successfully updated the limit for `{{category}}` with a new limit of `{{limit}}`",
