--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -117,10 +117,10 @@
 
   "automod_less_than_zero": "{{emote_warn}} {{limit}} cannot be less than `0`",
 
-  "automod_not_in_database": "{{emote_warn}} Item `{{item}}` has not yet been added to the AutoMod database.",
+  "automod_not_in_database": "{{emote_warn}} Item(s) `{{item}}` has/have not yet been added to the AutoMod database.",
   "automod_already_in_database": "{{emote_warn}} Item(s) `{{item}}` is/are already in the AutoMod database.",
   "automod_add_success": "{{emote_success}} Successfully added item(s) `{{item}}` to `{{category}}`.",
-  "automod_remove_success": "{{emote_success}} Successfully removed item `{{item}}` from `{{category}}`",
+  "automod_remove_success": "{{emote_success}} Successfully removed item(s) `{{item}}` from `{{category}}`",
 
   "automod_updated_limit": "{{emote_success}} Successfully updated the limit for `{{category}}` with a new limit of `{{limit}}`",
   "automod_updated_punishment": "{{emote_success}} Successfully updated the punishment for `{{category}}` to `{{punishment}}`",
