--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -247,12 +247,13 @@
   "deafen_already_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is already deafened!",
   "undeafen_not_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not deafened!",
 
-  "slowmode_success_remove": "{{emote_success}} Successfully removed slowmode from {{channel}}",
-  "slowmode_success": "{{emote_success}} Successfully set slowmode in {{channel}} to **{{slowmode}}**",
-  "slowmode_missing_perms": "{{emote_fail}} The bot is missing permissions to manage {{channel}}",
+  "slowmode_success_remove": "{{emote_success}} Successfully removed slowmode from <#{{channel}}>",
+  "slowmode_success": "{{emote_success}} Successfully set slowmode in <#{{channel}}> to **{{slowmode}}**",
+  "slowmode_missing_perms": "{{emote_fail}} The bot is missing permissions to manage <#{{channel}}>",
 
   "duration_invalid_0s": "{{emote_fail}} Duration cannot be lower than **0 seconds**!",
-  "duration_invalid_1y": "{{emote_fail}} Duration cannot be higher than **1 year**!",
+  "duration_invalid_6h": "{{emote_fail}} Duration cannot be longer than **6 hours**",
+  "duration_invalid_1y": "{{emote_fail}} Duration cannot be longer than **1 year**!",
 
   "lockdown_locked": "{{emote_success}} Successfully locked down channel <#{{channel}}>",
   "lockdown_unlocked": "{{emote_success}} Successfully unlocked channel <#{{channel}}>",
