--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -216,7 +216,7 @@
   "remove_nick_success": "{{emote_success}} Nickname removed from **{{target.tag}}** `({{target.id}})` for **{{reason}}** `[#{{infraction_id}}]`",
   "change_nick_mod_action_log": "{{emote_success}} Nickname of **{{target.tag}}** `({{target.id}})` has been {{action}} from `{{nick_old}}` to `{{nick_new}}` by **{{moderator.tag}}** `({{moderator.id}})` for **{{reason}}** `[#{{infraction_id}}]`",
   "remove_nick_mod_action_log": "{{emote_success}} Nickname {{action}} from **{{target.tag}}** `({{target.id}})` by **{{moderator.tag}}** `({{moderator.id}})` for **{{reason}}** `[#{{infraction_id}}]`",
-  "change_nick_fail": "{{emote_warn}} Unable to change nickname of **{{target.tag}}** `({{target.id}})`",
+  "change_nick_fail": "{{emote_fail}} Unable to change nickname of **{{target.tag}}** `({{target.id}})`",
   "already_no_nickname": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` does not have a nickname to remove",
   "already_has_nickname": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is already nicknamed `{{nickname}}`",
   "nickname_too_long": "{{emote_warn}} Nickname has too many characters (`{{length}}`). Nicknames are limited to 32 characters",
