--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -141,14 +141,14 @@
 
   "automod_violation_max_messages_reason": "Violated `MAX_MESSAGES` check in #{{channel.name}} ({amount}/{limit}s)",
   "automod_violation_max_messages_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `MAX_MESSAGES` check in <#{{channel.id}}>. Messages ({{amount}}/{{limit}}s)",
-  "automod_violation_max_mentions_reason": "Violated `MAX_MESASGES` check in #{{channel.name}} ({{amount}}/{{limit}}s)",
+  "automod_violation_max_mentions_reason": "Violated `MAX_MESSAGES` check in #{{channel.name}} ({{amount}}/{{limit}}s)",
   "automod_violation_max_mentions_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `MAX_MENTIONS` check in <#{{channel.id}}>. Mentions ({{amount}}/{{limit}}s)",
   "automod_violation_words_reason": "Violated `FORBIDDEN_WORDS` check in #{{channel.name}}",
-  "automod_violation_words_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WORDS` check in {{channel}} | Punishment: **{{punishment}}**\n**Blacklisted words:** `{{words}}`\n```{{message}}```",
+  "automod_violation_words_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WORDS` check in <#{{channel.id}}> | Punishment: **{{punishment}}**\n**Blacklisted words:** `{{words}}`\n```{{message}}```",
   "automod_violation_invites_reason": "Violated `DISCORD_INVITE` check in #{{channel.name}}",
-  "automod_violation_invites_log": "{{emote_warn}} **{target_tag}** `({{target.id}})` has violated the `DISCORD_INVITE` check in {{channel}} | Punishment: **{{punishment}}**\n```{{message}}```",
+  "automod_violation_invites_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `DISCORD_INVITE` check in <#{{channel.id}}> | Punishment: **{{punishment}}**\n```{{message}}```",
   "automod_violation_website_reason": "Violated `FORBIDDEN_WEBSITE` check in #{{channel.name}}",
-  "automod_violation_website_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WEBSITE` check in {{channel}} | Punishment: **{{punishment}}**\n```{{message}}```",
+  "automod_violation_website_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WEBSITE` check in <#{{channel.id}}> | Punishment: **{{punishment}}**\n```{{message}}```",
 
   "jumbo_too_many": "{{emote_warn}} Too many emojis provided. The bot currently only supports a max of 10 emojis at a time.",
   "jumbo_invalid": "{{emote_fail}} Invalid emoji(s) provided. Please use a valid emoji.",
