--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -41,7 +41,7 @@
     "nick_remove": "removed"
   },
 
-  "global_logging_command": "`[{{timestamp}}]` {{emote_wrench}} **{{user.tag}}** `({{user.id}})` has executed `{{command}}` in {{channel}}.",
+  "global_logging_command": "`[{{timestamp}}]` {{emote_wrench}} **{{user.tag}}** `({{user.id}})` has executed `{{command}}` in <#{{channel}}>.",
   "global_no_reason": "No reason given",
   "global_loading": "{{emote_loading}} Loading...",
   "global_not_in_voice": "{{emote_fail}} User **{{target.tag}}** `({{target.id}})` is currently not connected to any Voice Channels!",
