Moved guildMemberRemove.ts to new translator

--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -77,7 +77,7 @@
   "event_invite_delete": "{{emote_warn}} **{{moderator.tag}}** `({{moderator.id}})` has deleted an invite `{{invite.code}}`",
 
   "event_member_joined": "{{emote_join}} **{{user.tag}}** `({{user.id}})` has joined the server.\n**Account created:** <t:{{user_age}}:R>",
-  "event_member_leave": "{{emote_leave}} **{{user.tag}}** `({{user.id}})` has left the server.\n**Account joined:** {{account_joined_timestamp}}",
+  "event_member_leave": "{{emote_leave}} **{{user.tag}}** `({{user.id}})` has left the server.\n**Account joined:** <t:{{user_joined}}:f>",
 
   "event_member_update_nickname": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` has changed their nickname from `{{before}}` to `{{after}}`",
   "event_member_update_role_add": "{{emote_warn}} The **{{role}}** Role has been added to **{{user.tag}}** `({{user.id}})`",
