--- a/src/languages/en-US-new.json
+++ b/src/languages/en-US-new.json
@@ -61,7 +61,8 @@
   "event_message_args_unexpected": "{{emote_warn}} Unexpected argument {{argument}}. Expected `{{arg_expected}}` got `{{arg_provided}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
   "event_message_args_missing": "{{emote_warn}} Missing argument `{{argument}}`. Expected `{{arg_expected}}`.\n**{{emote_wrench}} Correct usage:** {{usage}}",
   "event_message_args_missing_list": "{{emote_warn}} Unexpected argument `{{argument}}`. Expected `{{arg_expected}}`.\n{{emote_wrench}} **Correct arguments:** {{argument_list}}",
-  "event_message_edit": "{{emote_edit}} Message from **{{user.tag}}** `({{user.id}})` has been updated in {{channel}}\n`ID (channel-message): {{channel_id}}-{{message_id}}`\n**B:** {{before}}\n**A:** {{after}}",
+  "event_message_edit": "{{emote_edit}} Message from **{{user_tag}}** `({{user.id}})` has been updated in <#{{message.channel.id}}>\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`\n**B:** {{before}}\n**A:** {{after}}",
+  "event_message_edit_special": "{{emote_edit}} Message from **{{user_tag}}** `({{user.id}})` has been updated in <#{{message.channel.id}}>\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`",
   "event_message_delete": "{{emote_trash}} Message from **{{user_tag}}** `({{user.id}})` has been deleted in <#{{message.channel.id}}>.\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`\n{{content}}\n{{attachment}}\n{{embed}}",
   "event_message_delete_special": "{{emote_trash}} Message from **{{user_tag}}** `({{user.id}})` has been deleted in <#{{message.channel.id}}>.\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`",
 
