yea, so d.js13 happend

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -170,7 +170,7 @@
   "userinfo_embed_roles": "**Roles:** {{user_roles}}\n",
   "userinfo_embed_infractions": "\n**Infractions:** {{emote_inf}} **{{user_infractions}}** infraction(s) in this server",
 
-  "serverinfo_embed_owner": "{{emote_owner}} **Owner:** <@{{guild.ownerID}}> `{{guild.ownerID}}`\n",
+  "serverinfo_embed_owner": "{{emote_owner}} **Owner:** <@{{guild.ownerId}}> `{{guild.ownerId}}`\n",
   "serverinfo_embed_features": "**Features:**\n{{guild_features}}\n",
   "serverinfo_embed_region": "**Region:** {{guild_region}}\n",
   "serverinfo_embed_verification": "**Verification level:** {{guild.verificationLevel}}\n",
