--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -300,5 +300,9 @@
   "infraction_claim_success": "{{emote_success}} You have claimed responsibility over infraction **#{{infraction_id}}**",
   "infraction_update_success": "{{emote_success}} Infraction **#{{infraction_id}}** has been updated!",
 
+  "infraction_interaction_reply": "{{emote_warn}} **{{target.tag}}'s** `({{target.id}})` infractions",
+  "infraction_interaction_placeholder": "No Infractions Selected",
+  "infraction_interaction_description": "Click to view more info",
+
   "commands_help": "You can find all the commands Bulbbot offers at our **[GitHub](https://github.com/TestersQTs/Bulbbot/blob/master/docs/CommandList.md)**"
 }
