Adding even more Czech translation and fixing some typos in en-US locale
What was added/edited:
1. Czech translation till line 100
2. Some "typos" in en-US were fixed

--- a/src/languages/cs.CZ.json
+++ b/src/languages/cs.CZ.json
@@ -50,54 +50,54 @@
       "automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined."
     },
   
-    "global_cannot_action_self": "{{emote_warn}} You cannot perform this action on yourself!",
-    "global_cannot_action_owner": "{{emote_warn}} You cannot perform this action on the server owner!",
-    "global_cannot_action_role_equal": "{{emote_warn}} You cannot perform this action on **{{target.tag}}** `({{target.id}})` as you do not have a higher role than them!",
-    "global_cannot_action_role_equal_bot": "{{emote_warn}} I cannot perform this action on **{{target.tag}}** `({{target.id}})` as I don't have a higher role than them!",
-    "global_cannot_action_bot_self": "{{emote_warn}} You cannot perform this action on the bot!",
+    "global_cannot_action_self": "{{emote_warn}} Tuto akci nemužeš provést na sobě!",
+    "global_cannot_action_owner": "{{emote_warn}} Tuto akci nemůžeš provést na majiteli serveru!",
+    "global_cannot_action_role_equal": "{{emote_warn}} Tuto akci nemužeš provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemáš vyšší roli než oni!",
+    "global_cannot_action_role_equal_bot": "{{emote_warn}} Tuto akci nemůžu provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemám vyšší roli než oni!",
+    "global_cannot_action_bot_self": "{{emote_warn}} Tuto akci nemužeš provést na botovi!",
+    
+    "global_premium_only": "Toto je premiový příkaz. Staňte se patronem a získejte přístup k tomuto příkazu a k dalším premiovým funkcí na <https://www.patreon.com/bulbbot>",
   
-    "global_premium_only": "This is a premium command. Become a Patron and get access to this command and other exclusive features at <https://www.patreon.com/bulbbot>",
+    "event_message_args_unexpected": "{{emote_warn}} Neočekavaný argument {{argument}}. Očekával jsem `{{arg_expected}}` dostal jsem `{{arg_provided}}`.\n{{emote_wrench}} **Správné použití:** {{usage}}",
+    "event_message_args_missing": "{{emote_warn}} Chybějicí argument `{{argument}}`. Očekával jsem `{{arg_expected}}`.\n**{{emote_wrench}} Správné použití:** {{usage}}",
+    "event_message_args_missing_list": "{{emote_warn}} Neočekavaný argument `{{argument}}`. Očekaval jsem `{{arg_expected}}`.\n{{emote_wrench}} **Správné argumenty:** {{argument_list}}",
+    "event_message_edit": "{{emote_edit}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla upravena v kanálu <#{{message.channel.id}}>\n`ID (kanál-zpráva): {{message.channel.id}}-{{message.id}}`\n**B:** {{before}}\n**A:** {{after}}",
+    "event_message_edit_special": "{{emote_edit}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla upravena v kanálu <#{{message.channel.id}}>\n`ID (kanál-zpráva): {{message.channel.id}}-{{message.id}}`",
+    "event_message_delete": "{{emote_trash}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla smazána v kanálu <#{{channel.id}}>.\n`ID (kanál-zpráva): {{channel.id}}-{{message.id}}`\n{{content}}{{reply}}{{sticker}}{{attachment}}{{embed}}",
+    "event_message_delete_special": "{{emote_trash}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla smazána v kanálu <#{{message.channel.id}}>.\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`",
   
-    "event_message_args_unexpected": "{{emote_warn}} Unexpected argument {{argument}}. Expected `{{arg_expected}}` got `{{arg_provided}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
-    "event_message_args_missing": "{{emote_warn}} Missing argument `{{argument}}`. Expected `{{arg_expected}}`.\n**{{emote_wrench}} Correct usage:** {{usage}}",
-    "event_message_args_missing_list": "{{emote_warn}} Unexpected argument `{{argument}}`. Expected `{{arg_expected}}`.\n{{emote_wrench}} **Correct arguments:** {{argument_list}}",
-    "event_message_edit": "{{emote_edit}} Message from **{{user_tag}}** `({{user.id}})` has been updated in <#{{message.channel.id}}>\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`\n**B:** {{before}}\n**A:** {{after}}",
-    "event_message_edit_special": "{{emote_edit}} Message from **{{user_tag}}** `({{user.id}})` has been updated in <#{{message.channel.id}}>\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`",
-    "event_message_delete": "{{emote_trash}} Message from **{{user_tag}}** `({{user.id}})` has been deleted in <#{{channel.id}}>.\n`ID (channel-message): {{channel.id}}-{{message.id}}`\n{{content}}{{reply}}{{sticker}}{{attachment}}{{embed}}",
-    "event_message_delete_special": "{{emote_trash}} Message from **{{user_tag}}** `({{user.id}})` has been deleted in <#{{message.channel.id}}>.\n`ID (channel-message): {{message.channel.id}}-{{message.id}}`",
+    "event_change": "`{{part}}` z `{{before}}` na `{{after}}`",
+    "event_update_server": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` upravil nastavení serveru. Změnil {{changes}}",
+    "event_update_role": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` upravil roli **{{role.name}}**. Změnil {{changes}}",
+    "event_update_channel": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` upravil kanál <#{{channel.id}}>. Zménil {{changes}}",
   
-    "event_change": "`{{part}}` from `{{before}}` to `{{after}}`",
-    "event_update_server": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the server settings. Changed {{changes}}",
-    "event_update_role": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated the **{{role.name}}** Role. Changed {{changes}}",
-    "event_update_channel": "{{emote_wrench}} **{{moderator.tag}}** `({{moderator.id}})` has updated <#{{channel.id}}>. Changed {{changes}}",
+    "event_channel_create": "{{emote_add}} Nový kanál byl vytvořen <#{{channel.id}}> (`{{channel.type}}`)",
+    "event_channel_delete": "{{emote_remove}} Kanál **#{{channel.name}}** (`{{channel.id}}`) (`{{channel.type}}`) byl smazán.",
   
-    "event_channel_create": "{{emote_add}} A new channel has been created <#{{channel.id}}> (`{{channel.type}}`)",
-    "event_channel_delete": "{{emote_remove}} The **#{{channel.name}}** (`{{channel.id}}`) (`{{channel.type}}`) channel has been deleted.",
+    "event_thread_create": "{{emote_add}} Nové vlakno **{{thread.name}}** <#{{thread.id}}> `({{thread.id}})` bylo vytvořeno uživatelem <@{{thread.ownerId}}> v kanálu <#{{thread.parentId}}>. Vlákno bude archiváno **{{thread_archive}}**",
+    "event_thread_delete": "{{emote_remove}} Vlákno **{{thread.name}}** `({{thread.id}})` vytvořeno uživatelem <@{{thread.ownerId}}> v kanálu <#{{thread.parentId}}> bylo smazáno",
   
-    "event_thread_create": "{{emote_add}} A new thread has been created **{{thread.name}}** <#{{thread.id}}> `({{thread.id}})` by <@{{thread.ownerId}}> in <#{{thread.parentId}}> and will be archive at **{{thread_archive}}**",
-    "event_thread_delete": "{{emote_remove}} Thread **{{thread.name}}** `({{thread.id}})` by <@{{thread.ownerId}}> in <#{{thread.parentId}}> has been removed",
+    "event_invite_create": "{{emote_add}} **{{invite.inviter.tag}}** `({{invite.inviter.id}})` vytvořil novou pozvánku `{{invite.code}}`, která vyprší v **{{expire_time}}**, maximum použítí je **{{max_uses}}**",
+    "event_invite_delete": "{{emote_remove}} **{{moderator.tag}}** `({{moderator.id}})` smazal pozvánku `{{invite.code}}`",
   
-    "event_invite_create": "{{emote_add}} **{{invite.inviter.tag}}** `({{invite.inviter.id}})` has created a new invite `{{invite.code}}`, expires **{{expire_time}}**, max uses **{{max_uses}}**",
-    "event_invite_delete": "{{emote_remove}} **{{moderator.tag}}** `({{moderator.id}})` has deleted an invite `{{invite.code}}`",
+    "event_member_joined": "{{emote_join}} **{{user.tag}}** `({{user.id}})` se připojil na server.\n**Učet vytvořen:** <t:{{user_age}}:R>",
+    "event_member_leave": "{{emote_leave}} **{{user.tag}}** `({{user.id}})` opustil server.\n**Učet se připojil:** <t:{{user_joined}}:f>",
   
-    "event_member_joined": "{{emote_join}} **{{user.tag}}** `({{user.id}})` has joined the server.\n**Account created:** <t:{{user_age}}:R>",
-    "event_member_leave": "{{emote_leave}} **{{user.tag}}** `({{user.id}})` has left the server.\n**Account joined:** <t:{{user_joined}}:f>",
+    "event_member_update_nickname": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` si změnil přezdívku ze `{{before}}` na `{{after}}`",
+    "event_member_update_role_add": "{{emote_add}} Role **{{role.name}}** byla přidána k uživateli **{{user.tag}}** `({{user.id}})`",
+    "event_member_update_role_add_moderator": "{{emote_add}} Role **{{role.name}}** byla přidána k **{{user.tag}}** `({{user.id}})` moderátorem **{{moderator.tag}}** `({{moderator.id}})`",
+    "event_member_update_role_remove": "{{emote_remove}} Role **{{role.name}}** byla odebráno od **{{user.tag}}** `({{user.id}})`",
+    "event_member_update_role_remove_moderator": "{{emote_remove}} Role **{{role.name}}** byla odebráno od **{{user.tag}}** `({{user.id}})` moderátorem **{{moderator.tag}}** `({{moderator.id}})`",
   
-    "event_member_update_nickname": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` has changed their nickname from `{{before}}` to `{{after}}`",
-    "event_member_update_role_add": "{{emote_add}} The **{{role.name}}** Role has been added to **{{user.tag}}** `({{user.id}})`",
-    "event_member_update_role_add_moderator": "{{emote_add}} The **{{role.name}}** Role has been added to **{{user.tag}}** `({{user.id}})` by **{{moderator.tag}}** `({{moderator.id}})`",
-    "event_member_update_role_remove": "{{emote_remove}} The **{{role.name}}** Role has been removed from **{{user.tag}}** `({{user.id}})`",
-    "event_member_update_role_remove_moderator": "{{emote_remove}} The **{{role.name}}** Role has been removed from **{{user.tag}}** `({{user.id}})` by **{{moderator.tag}}** `({{moderator.id}})`",
+    "config_generic_success": "{{emote_success}} `{{setting}}` byl úspěšně aktualizován na `{{value}}`",
   
-    "config_generic_success": "{{emote_success}} Successfully updated the `{{setting}}` setting to `{{value}}`",
+    "config_language_success": "{{emote_success}} Jazyk serveru byl úspěšně změněn na `{{language}}`",
+    "config_timezone_success": "{{emote_success}} Časová zóna serveru byla změněna na `{{timezone}}`",
   
-    "config_language_success": "{{emote_success}} Successfully changed the server language to `{{language}}`",
-    "config_timezone_success": "{{emote_success}} Successfully changed the server timezone to `{{timezone}}`",
-  
-    "config_logging_success": "{{emote_success}} Successfully started logging `{{logging_type}}` in <#{{channel}}>",
-    "config_logging_remove": "{{emote_success}} Successfully removed logging for `{{logging_type}}` from <#{{channel}}>",
-    "config_logging_unable_to_send_messages": "{{emote_fail}} The bot is missing crucial permissions to send messages in <#{{channel}}>",
-    "config_logging_all_confirm": "{{emote_warn}} Are you sure you want to add all logging types to <#{{channel}}>? This will begin to log all loggable actions in the selected channel.",
+    "config_logging_success": "{{emote_success}} Úspěšne zaznamenávám `{{logging_type}}` v kanálu <#{{channel}}>",
+    "config_logging_remove": "{{emote_success}} Zaznamenávaní `{{logging_type}}` bylo úspěšne zrušeno v kanálu <#{{channel}}>",
+    "config_logging_unable_to_send_messages": "{{emote_fail}} Bot postráda duležítá oprávnéní pro posílaní zpráv v kanálu <#{{channel}}>",
+    "config_logging_all_confirm": "{{emote_warn}} Jsi si jistý že chceš vše začít zaznamenávat v kanálu  <#{{channel}}>? Toto začne zaznamenávat vše co lze zaznaménavat v určeném kanále.",
   
     "config_mute_success": "{{emote_success}} Successfully updated the mute role",
     "config_mute_unable_to_manage": "{{emote_fail}} The bot is unable to manage the selected role. Move the bot's role higher than the selected role.",
