--- a/src/languages/cs.CZ.json
+++ b/src/languages/cs.CZ.json
@@ -2,9 +2,9 @@
     "global_executed_by": "Provedeno uživatelem {{user.tag}}",
     "global_execution_cancel": "{{emote_fail}} Provedení příkazu bylo zrušeno",
     "global_missing_permissions": "{{emote_lock}} Nedostatečná oprávnění",
-    "global_missing_permissions_bot": "Bot postradá duležítá opravnění pro provedení tohoto příkazu. Zkontroluj prosím oprávnění bota.\n{{missing}}",
-    "global_cannot_convert": "{{emote_fail}} Nemužu převést `{{arg_provided}}` na `{{arg_expected}}`.\n{{emote_wrench}} **Správné použítí:** {{usage}}",
-"global_not_found": "{{emote_fail}} Specifikovaný/á {{type}} nebyl(a) nalezen(a). Nemůžu převést `{{arg_provided}}` na `{{arg_expected}}`.\n{{emote_wrench}} **Správné použití:** {{usage}}",
+    "global_missing_permissions_bot": "Bot postradá důležitá opravnění pro provedení tohoto příkazu. Zkontroluj prosím oprávnění bota.\n{{missing}}",
+    "global_cannot_convert": "{{emote_fail}} Nemohu převést `{{arg_provided}}` na `{{arg_expected}}`.\n{{emote_wrench}} **Správné použítí:** {{usage}}",
+    "global_not_found": "{{emote_fail}} Specifikovaný/á {{type}} nebyl(a) nalezen(a). Nemohu převést `{{arg_provided}}` na `{{arg_expected}}`.\n{{emote_wrench}} **Správné použití:** {{usage}}",
     "global_not_found_types": {
       "user": "uživatel",
       "member": "člen",
@@ -42,25 +42,25 @@
     },
   
     "global_logging_command": "`[{{timestamp}}]` {{emote_wrench}} **{{user.tag}}** `({{user.id}})` provedl `{{command}}` v kanálu <#{{channel}}>.",
-    "global_no_reason": "Bez udaní důvodu",
+    "global_no_reason": "Bez udání důvodu",
     "global_loading": "{{emote_loading}} Načítání...",
     "global_not_in_voice": "{{emote_fail}} Uživatel **{{target.tag}}** `({{target.id}})` není momentálně v žádném hlasovém kanále!",
     "global_error": {
-      "unknown": "{{emote_fail}} Nastala chyba neznámeho původu, zkuste to prosím později nebo pokud se problém stále objevujet kontaktuje vývojáře na serveru: {{discord_invite}}",
-      "automod_items_length_undefined": "{{emote_fail}} An error occurred while attempting to parse the selected Automod items. No Automod items have been provided or Automod items length is undefined."
+      "unknown": "{{emote_fail}} Nastala chyba neznámého původu, zkuste to prosím později nebo pokud se problém stále objevuje kontaktuje vývojáře na serveru: {{discord_invite}}",
+      "automod_items_length_undefined": "{{emote_fail}} Nastala chyba při pokusu o analýzu vybraných Automod předmětů. Žádné Automod předměty nebyly obdrženy nebo je nedefinovaná délka Automod předmětů."
     },
   
-    "global_cannot_action_self": "{{emote_warn}} Tuto akci nemužeš provést na sobě!",
+    "global_cannot_action_self": "{{emote_warn}} Tuto akci nemůžeš provést na sobě!",
     "global_cannot_action_owner": "{{emote_warn}} Tuto akci nemůžeš provést na majiteli serveru!",
-    "global_cannot_action_role_equal": "{{emote_warn}} Tuto akci nemužeš provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemáš vyšší roli než oni!",
-    "global_cannot_action_role_equal_bot": "{{emote_warn}} Tuto akci nemůžu provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemám vyšší roli než oni!",
-    "global_cannot_action_bot_self": "{{emote_warn}} Tuto akci nemužeš provést na botovi!",
+    "global_cannot_action_role_equal": "{{emote_warn}} Tuto akci nemůžeš provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemáš vyšší roli než oni!",
+    "global_cannot_action_role_equal_bot": "{{emote_warn}} Tuto akci nemohu provést na uživateli **{{target.tag}}** `({{target.id}})` jelikož nemám vyšší roli než oni!",
+    "global_cannot_action_bot_self": "{{emote_warn}} Tuto akci nemůžeš provést na botovi!",
     
-    "global_premium_only": "Toto je premiový příkaz. Staňte se patronem a získejte přístup k tomuto příkazu a k dalším premiovým funkcí na <https://www.patreon.com/bulbbot>",
+    "global_premium_only": "Toto je prémiový příkaz. Staň se patronem a získejte přístup k tomuto příkazu a k dalším prémiovým funkcím na <https://www.patreon.com/bulbbot>",
   
-    "event_message_args_unexpected": "{{emote_warn}} Neočekavaný argument {{argument}}. Očekával jsem `{{arg_expected}}` dostal jsem `{{arg_provided}}`.\n{{emote_wrench}} **Správné použití:** {{usage}}",
+    "event_message_args_unexpected": "{{emote_warn}} Neočekávaný argument {{argument}}. Očekával jsem `{{arg_expected}}` dostal jsem `{{arg_provided}}`.\n{{emote_wrench}} **Správné použití:** {{usage}}",
     "event_message_args_missing": "{{emote_warn}} Chybějicí argument `{{argument}}`. Očekával jsem `{{arg_expected}}`.\n**{{emote_wrench}} Správné použití:** {{usage}}",
-    "event_message_args_missing_list": "{{emote_warn}} Neočekavaný argument `{{argument}}`. Očekaval jsem `{{arg_expected}}`.\n{{emote_wrench}} **Správné argumenty:** {{argument_list}}",
+    "event_message_args_missing_list": "{{emote_warn}} Neočekavaný argument `{{argument}}`. Očekával jsem `{{arg_expected}}`.\n{{emote_wrench}} **Správné argumenty:** {{argument_list}}",
     "event_message_edit": "{{emote_edit}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla upravena v kanálu <#{{message.channel.id}}>\n`ID (kanál-zpráva): {{message.channel.id}}-{{message.id}}`\n**B:** {{before}}\n**A:** {{after}}",
     "event_message_edit_special": "{{emote_edit}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla upravena v kanálu <#{{message.channel.id}}>\n`ID (kanál-zpráva): {{message.channel.id}}-{{message.id}}`",
     "event_message_delete": "{{emote_trash}} Zpráva od uživatele **{{user_tag}}** `({{user.id}})` byla smazána v kanálu <#{{channel.id}}>.\n`ID (kanál-zpráva): {{channel.id}}-{{message.id}}`\n{{content}}{{reply}}{{sticker}}{{attachment}}{{embed}}",
@@ -74,30 +74,30 @@
     "event_channel_create": "{{emote_add}} Nový kanál byl vytvořen <#{{channel.id}}> (`{{channel.type}}`)",
     "event_channel_delete": "{{emote_remove}} Kanál **#{{channel.name}}** (`{{channel.id}}`) (`{{channel.type}}`) byl smazán.",
   
-    "event_thread_create": "{{emote_add}} Nové vlakno **{{thread.name}}** <#{{thread.id}}> `({{thread.id}})` bylo vytvořeno uživatelem <@{{thread.ownerId}}> v kanálu <#{{thread.parentId}}>. Vlákno bude archiváno **{{thread_archive}}**",
+    "event_thread_create": "{{emote_add}} Nové vlákno **{{thread.name}}** <#{{thread.id}}> `({{thread.id}})` bylo vytvořeno uživatelem <@{{thread.ownerId}}> v kanálu <#{{thread.parentId}}>. Vlákno bude archiváno **{{thread_archive}}**",
     "event_thread_delete": "{{emote_remove}} Vlákno **{{thread.name}}** `({{thread.id}})` vytvořeno uživatelem <@{{thread.ownerId}}> v kanálu <#{{thread.parentId}}> bylo smazáno",
   
-    "event_invite_create": "{{emote_add}} **{{invite.inviter.tag}}** `({{invite.inviter.id}})` vytvořil novou pozvánku `{{invite.code}}`, která vyprší v **{{expire_time}}**, maximum použítí je **{{max_uses}}**",
+    "event_invite_create": "{{emote_add}} **{{invite.inviter.tag}}** `({{invite.inviter.id}})` vytvořil novou pozvánku `{{invite.code}}`, která vyprší v **{{expire_time}}**, maximální počet použití je **{{max_uses}}**",
     "event_invite_delete": "{{emote_remove}} **{{moderator.tag}}** `({{moderator.id}})` smazal pozvánku `{{invite.code}}`",
   
     "event_member_joined": "{{emote_join}} **{{user.tag}}** `({{user.id}})` se připojil na server.\n**Učet vytvořen:** <t:{{user_age}}:R>",
     "event_member_leave": "{{emote_leave}} **{{user.tag}}** `({{user.id}})` opustil server.\n**Učet se připojil:** <t:{{user_joined}}:f>",
   
-    "event_member_update_nickname": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` si změnil přezdívku ze `{{before}}` na `{{after}}`",
+    "event_member_update_nickname": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` si změnil přezdívku z `{{before}}` na `{{after}}`",
     "event_member_update_role_add": "{{emote_add}} Role **{{role.name}}** byla přidána k uživateli **{{user.tag}}** `({{user.id}})`",
     "event_member_update_role_add_moderator": "{{emote_add}} Role **{{role.name}}** byla přidána k **{{user.tag}}** `({{user.id}})` moderátorem **{{moderator.tag}}** `({{moderator.id}})`",
-    "event_member_update_role_remove": "{{emote_remove}} Role **{{role.name}}** byla odebráno od **{{user.tag}}** `({{user.id}})`",
-    "event_member_update_role_remove_moderator": "{{emote_remove}} Role **{{role.name}}** byla odebráno od **{{user.tag}}** `({{user.id}})` moderátorem **{{moderator.tag}}** `({{moderator.id}})`",
+    "event_member_update_role_remove": "{{emote_remove}} Role **{{role.name}}** byla odebrána od **{{user.tag}}** `({{user.id}})`",
+    "event_member_update_role_remove_moderator": "{{emote_remove}} Role **{{role.name}}** byla odebrána od **{{user.tag}}** `({{user.id}})` moderátorem **{{moderator.tag}}** `({{moderator.id}})`",
   
     "config_generic_success": "{{emote_success}} `{{setting}}` byl úspěšně aktualizován na `{{value}}`",
   
     "config_language_success": "{{emote_success}} Jazyk serveru byl úspěšně změněn na `{{language}}`",
     "config_timezone_success": "{{emote_success}} Časová zóna serveru byla změněna na `{{timezone}}`",
   
-    "config_logging_success": "{{emote_success}} Úspěšne zaznamenávám `{{logging_type}}` v kanálu <#{{channel}}>",
-    "config_logging_remove": "{{emote_success}} Zaznamenávaní `{{logging_type}}` bylo úspěšne zrušeno v kanálu <#{{channel}}>",
-    "config_logging_unable_to_send_messages": "{{emote_fail}} Bot postráda duležítá oprávnéní pro posílaní zpráv v kanálu <#{{channel}}>",
-    "config_logging_all_confirm": "{{emote_warn}} Jsi si jistý že chceš vše začít zaznamenávat v kanálu  <#{{channel}}>? Toto začne zaznamenávat vše co lze zaznaménavat v určeném kanále.",
+    "config_logging_success": "{{emote_success}} Úspěšně zaznamenávám `{{logging_type}}` v kanálu <#{{channel}}>",
+    "config_logging_remove": "{{emote_success}} Zaznamenávání `{{logging_type}}` bylo úspěšně zrušeno v kanálu <#{{channel}}>",
+    "config_logging_unable_to_send_messages": "{{emote_fail}} Bot postrádá duležítá oprávnéní pro posílání zpráv v kanálu <#{{channel}}>",
+    "config_logging_all_confirm": "{{emote_warn}} Jsi si jistý že chceš vše začít zaznamenávat v kanálu  <#{{channel}}>? Toto začne zaznamenávat vše co lze zaznamenávat v určeném kanále.",
   
     "config_mute_success": "{{emote_success}} Successfully updated the mute role",
     "config_mute_unable_to_manage": "{{emote_fail}} The bot is unable to manage the selected role. Move the bot's role higher than the selected role.",
